# pyrig

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  README.md  branch-protection.json  mkdocs.yml  paper.md  prek.toml  pyproject.toml
.github/: configure.sh  pull_request_template.md  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  build.yml  deploy.yml  health_check.yaml  health_check.yml  publish.yaml  release.yaml  release.yml
docs/: api.md  architecture-file-generation.md  architecture.md  autouse-fixtures-validation.md  build.md  builder-system.md  ci-cd.md  cicd-continuous-integration.md  cli-command-line-interface.md  cli.md  comparison.md  config-files.md  configfile-system.md  dependency-management.md  drawbacks.md  fixtures.md  getting-started.md  index.md  mirror-tests.md  mkdocs.yml  multi-package-architecture.md  multi-package-support.md  overview.md  plugins.md  resilience-offline-capability.md  scaffolding.md  security.md  testing-system.md  testing-test-generation.md  tools.md
docs/builders/: architecture.md  index.md  pyinstaller.md
docs/cli/: architecture.md  index.md  shared-subcommands.md  subcommands.md
docs/cli/commands/: build.md  index.md  init.md  mkinits.md  mkroot.md  mktests.md  protect-repo.md  rmpyc.md  scratch.md
docs/config-files/: build-workflow.md  builders-init.md  configs-init.md  conftest.md  container-file.md  docs-index.md  dotenv.md  dotexperiment.md  dotpythonversion.md  fixtures-init.md  gitignore.md  health-check-workflow.md  index.md  license-file.md  main-test.md  main.md  mkdocs.md  pre-commit-config.md  publish-workflow.md  py-typed.md  pyproject.md  readme-file.md  release-workflow.md  resources-init.md  shared-subcommands.md  src-init.md  subcommands.md  zero-test.md
docs/configs/: api_md.md  architecture.md  branch_protection.md  builders_init.md  code_of_conduct.md  configs_init.md  conftest.md  container_file.md  contributing.md  dot_env.md  dot_experiment.md  dot_python_version.md  dot_scratch.md  fixtures_init.md  gitignore.md  index.md  index_md.md  license_md.md  main.md  mkdocs.md  pre_commit.md  pull_request_template.md  py_typed.md  pyproject.md  readme.md  readme_md.md  resources_init.md  security.md  shared_subcommands.md  src_init.md  subcommands.md  test_main.md  test_zero.md
docs/configs/issue_templates/: bug_report.md  config.md  feature_request.md  index.md
docs/configs/workflows/: architecture.md  build.md  deploy.md  health_check.md  index.md  publish.md  release.md
docs/management/: architecture.md  container_engine.md  dependency_auditor.md  docs_builder.md  index.md  linter.md  mdlinter.md  package_manager.md  pre_committer.md  project_tester.md  pyrigger.md  remote_version_controller.md  security_checker.md  type_checker.md  version_controller.md
docs/more/: drawbacks.md  example-usage.md  getting-started.md  index.md  tooling.md
docs/resources/: index.md  resources.md
docs/tests/: autouse.md  fixtures.md  index.md  structure.md
docs/tools/: architecture.md  container_engine.md  dependency_auditor.md  docs_builder.md  index.md  linter.md  mdlinter.md  package_index.md  package_manager.md  pre_committer.md  project_coverage_tester.md  project_tester.md  pyrigger.md  remote_version_controller.md  security_checker.md  type_checker.md  version_controller.md
py_dev/: setup.py
py_dev/dev/artifacts/: build.py
py_dev/dev/cli/: cli.py  subcommands.py
py_dev/dev/configs/: builder.py  configs.py  conftest.py  dot_env.py  dot_python_version.py  experiment.py  gitignore.py  licence.py  pre_commit.py  py_typed.py  pyproject.py  readme.py  subcommands.py  zero_test.py
py_dev/utils/modules/: class_.py  function.py  module.py  package.py
py_dev/utils/projects/: create_root.py
py_dev/utils/testing/: assertions.py  convention.py  create_tests.py  skip.py  utils.py
pyrig/: __init__.py  main.py
pyrig/dev/: __init__.py
pyrig/dev/artifacts/: build.py
pyrig/dev/builders/: __init__.py  pyinstaller.py
pyrig/dev/cli/: cli.py  subcommands.py
pyrig/dev/configs/: __init__.py  branch_protection.py  builder.py  configs.py  conftest.py  dot_env.py  dot_python_version.py  gitignore.py  licence.py  mkdocs.py  pre_commit.py  py_typed.py  pyproject.py  readme.py  subcommands.py  zero_test.py
pyrig/dev/management/: __init__.py  container_engine.py  dependency_auditor.py  docs_builder.py  linter.py  mdlinter.py  package_manager.py  pre_committer.py  project_tester.py  pyrigger.py  remote_version_controller.py  security_checker.py  type_checker.py  version_controller.py
pyrig/dev/tests/: __init__.py  conftest.py  mirror_test.py
pyrig/dev/tools/: container_engine.py  dependency_auditor.py  docs_builder.py  linter.py  mdlinter.py  package_manager.py  pre_committer.py  project_tester.py  pyrigger.py  remote_version_controller.py  security_checker.py  type_checker.py  version_controller.py
pyrig/dev/utils/: __init__.py  consts.py  git.py  github.py  github_api.py  packages.py  resources.py  testing.py  urls.py  version_control.py  versions.py
pyrig/resources/: __init__.py
pyrig/rig/: __init__.py
pyrig/rig/builders/: pyinstaller.py
pyrig/rig/cli/: cli.py  shared_subcommands.py  subcommands.py
pyrig/rig/configs/: dot_env.py  dot_python_version.py  licence.py  license.py  py_typed.py  pyproject.py
pyrig/rig/tests/: conftest.py  mirror_test.py
pyrig/rig/tools/: container_engine.py  dependency_auditor.py  docs_builder.py  linter.py  mdlinter.py  package_index.py  package_manager.py  pre_committer.py  programming_language.py  project_coverage_tester.py  project_tester.py  pyrigger.py  remote_version_controller.py  security_checker.py  type_checker.py  version_controller.py
pyrig/src/: __init__.py  cli.py  consts.py  decorators.py  dependency_graph.py  git.py  graph.py  iterate.py  processes.py  requests.py  resource.py  singleton.py  string.py  string_.py  subclass.py
src/pyrig/: __init__.py
tests/: conftest.py
tests/test_py_dev/: test_setup.py
tests/test_pyrig/: test_main.py
(+1105 files in other folders)
