[project]
name = "pyrig"
version = "17.5.2"
description = "A tool that standardizes and automates Python project setup, configuration, development, and maintenance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirerpy>=0.3.4",
    "packaging>=26.2",
    "pyrig-runtime>=2.0.0",
    "pyyaml>=6.0.3",
    "spdx-matcher>=0.1.4",
    "tomlkit>=0.15.0",
    "typer>=0.26.8",
]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Installation/Setup",
]
keywords = [
    "pyrig",
    "project-setup",
    "scaffolding",
    "boilerplate",
    "project-template",
    "automation",
    "configuration",
    "developer-tools",
    "code-quality",
    "ci-cd",
    "devops",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.urls]
Homepage = "https://github.com/Winipedia/pyrig"
Documentation = "https://Winipedia.github.io/pyrig"
Source = "https://github.com/Winipedia/pyrig"
Issues = "https://github.com/Winipedia/pyrig/issues"
Changelog = "https://github.com/Winipedia/pyrig/releases"

[project.scripts]
pyrig = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "prek>=0.4.6",
    "pyrig>=15.0.0",
    "pyrig-codecov>=3.0.0",
    "pyrig-fixtures>=2.0.0",
    "pyrig-overrides>=4.0.0",
    "pyrig-pypi>=3.0.0",
    "pyrig-resources>=3.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "ty>=0.0.56",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=pyrig --cov-branch --cov-report=term-missing --cov-fail-under=100 --cov-report=xml"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
